--- a/app/src/main/res/drawable/audio_record.xml
+++ b/app/src/main/res/drawable/audio_record.xml
@@ -1,5 +1,10 @@
-<vector android:height="100dp" android:tint="#F00000"
-    android:viewportHeight="24.0" android:viewportWidth="24.0"
-    android:width="100dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#010101" android:pathData="M12,12m-8,0a8,8 0,1 1,16 0a8,8 0,1 1,-16 0"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:height="100dp"
+        android:tint="#F00000"
+        android:viewportHeight="24.0"
+        android:viewportWidth="24.0"
+        android:width="100dp">
+    <path
+            android:fillColor="#010101"
+            android:pathData="M12,12m-8,0a8,8 0,1 1,16 0a8,8 0,1 1,-16 0"/>
 </vector>
