--- a/app/src/main/res/layout/fragment_record_audio.xml
+++ b/app/src/main/res/layout/fragment_record_audio.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -18,17 +20,50 @@
             android:layout_height="match_parent">
 
         <ImageButton
+                android:id="@+id/btn_recordAudio_pause"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:src="@drawable/audio_record"
+                android:src="@drawable/audio_pause"
+                android:onClick="@{() -> recordAudioViewModel.onPauseButtonClicked()}"
+                android:visibility="@{recordAudioViewModel.recordingStatus != RecordingStatus.PAUSED? View.VISIBLE : View.INVISIBLE}"
+                android:layout_margin="32dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/btn_recordAudio_restart"
+                app:layout_constraintStart_toEndOf="@+id/btn_recordAudio_stop"
+                app:layout_constraintHorizontal_bias="0.5"
+                android:contentDescription="@string/description_pause_recording"/>
+
+        <ImageButton
                 android:id="@+id/btn_recordAudio_record"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                tools:src="@drawable/audio_record"
                 android:src="@drawable/audio_record"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:onClick="@{() -> recordAudioViewModel.onRecordButtonClicked()}"
-                android:layout_margin="8dp"
-                android:visibility="@{recordAudioViewModel.recordButtonVisible()? View.VISIBLE : View.GONE}"
-                app:layout_constraintStart_toStartOf="parent"
+                android:layout_margin="32dp"
+                android:visibility="@{recordAudioViewModel.recordingStatus != RecordingStatus.RECORDING? View.VISIBLE : View.INVISIBLE}"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/btn_recordAudio_restart"
+                app:layout_constraintStart_toEndOf="@+id/btn_recordAudio_stop"
+                app:layout_constraintHorizontal_bias="0.5"
+                android:contentDescription="@string/description_start_recording"/>
+
+        <ImageButton
+                android:id="@+id/btn_recordAudio_restart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/audio_restart"
+                android:onClick="@{() -> recordAudioViewModel.onRestartButtonClicked()}"
+                android:layout_margin="32dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/btn_recordAudio_record"
+                app:layout_constraintHorizontal_bias="0.5"
+                android:contentDescription="@string/description_restart_recording"/>
 
         <ImageButton
                 android:id="@+id/btn_recordAudio_stop"
@@ -37,30 +72,12 @@
                 android:src="@drawable/audio_stop"
                 android:onClick="@{() -> recordAudioViewModel.onStopButtonClicked()}"
                 android:layout_margin="32dp"
-                android:visibility="@{recordAudioViewModel.stopButtonVisible ? View.VISIBLE : View.GONE}"
-                app:layout_constraintStart_toEndOf="@id/fragment_record_middle"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-
-        <androidx.constraintlayout.widget.Guideline
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/fragment_record_middle"
-                app:layout_constraintGuide_percent="0.5"
-                android:orientation="vertical"/>
-
-        <ImageButton
-                android:id="@+id/btn_recordAudio_pause"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/audio_pause"
-                app:layout_constraintEnd_toStartOf="@id/fragment_record_middle"
-                android:onClick="@{() -> recordAudioViewModel.onPauseButtonClicked()}"
-                android:layout_margin="32dp"
-                android:visibility="@{recordAudioViewModel.pauseButtonVisible? View.VISIBLE : View.GONE}"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/btn_recordAudio_record"
+                app:layout_constraintHorizontal_bias="0.5"
+                android:contentDescription="@string/description_stop_recording"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
