--- a/app/src/main/res/layout/event_card.xml
+++ b/app/src/main/res/layout/event_card.xml
@@ -6,7 +6,7 @@
                                                    android:layout_height="wrap_content">
 
     <TextView
-            android:text="TextView"
+            tools:text="Event Title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/label_overviewevents_title"
@@ -17,7 +17,7 @@
             app:layout_constraintEnd_toStartOf="@+id/img_overviewevents_thumbnailAvatar"/>
 
     <TextView
-            android:text="TextView"
+            tools:text="@tools:sample/date/ddmmyy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/label_overviewevent_eventDate"
