--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -2,7 +2,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
     <data>
 
         <variable
@@ -10,7 +9,7 @@
             type="be.hogent.faith.faith.loginOrRegister.WelcomeViewModel" />
     </data>
 
-    <FrameLayout
+    <FrameLayout xmlns:bind="http://schemas.android.com/apk/res-auto"
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -44,26 +43,13 @@
                 Why use guidelines, and not a kind of map? Because maps inherently use pixels, and those won't work
                 on screens of different resolutions. Guidelines can be set using percentages which will scale with
                 the device.-->
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guide_pole_right_start"
-                android:layout_width="1dp"
-                android:layout_height="1dp"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.82" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guide_pole_top"
                 android:layout_width="1dp"
                 android:layout_height="1dp"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.58" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guide_pole_right_end"
-                android:layout_width="1dp"
-                android:layout_height="1dp"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.98" />
+                app:layout_constraintGuide_percent="0.63" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guide_form_start"
@@ -77,28 +63,8 @@
                 android:layout_width="1dp"
                 android:layout_height="1dp"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.5" />
+                app:layout_constraintGuide_percent="0.61" />
 
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_register"
-                style="@style/arrow_style.toRight"
-                android:onClick="@{() -> welcomeViewModel.registerButtonClicked()}"
-                android:text="@string/msg_registreer"
-                app:icon="@drawable/icoon_stad"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/guideline7"
-                app:layout_constraintTop_toTopOf="@+id/guide_pole_top" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_city_startNewEvent"
-                style="@style/arrow_style.toLeft"
-                android:onClick="@{() -> welcomeViewModel.loginButtonClicked()}"
-                android:text="@string/msg_naar_de_stad"
-                app:icon="@drawable/icoon_stad"
-                app:layout_constraintEnd_toStartOf="@+id/guideline3"
-                app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputLayout_username"
@@ -127,7 +93,7 @@
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:hint="@string/password"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/guide_pole_top"
                 app:layout_constraintEnd_toStartOf="@+id/guide_form_end"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="@+id/guide_form_end"
@@ -147,32 +113,17 @@
                     app:layout_constraintStart_toStartOf="@+id/guide_form_start" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="200dp"
+
+            <include
+                android:id="@+id/included_arrows"
+                layout="@layout/view_loginarrows"
+                android:layout_width="0dp"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_height="0dp"
-                android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/guide_pole_right_start"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="@+id/guide_pole_right_start"
-                app:layout_constraintTop_toTopOf="@+id/guide_pole_top"
-                app:layout_constraintVertical_bias="0.9"
-                app:srcCompat="@drawable/paal" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_begin="959dp" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_begin="1060dp" />
+                app:layout_constraintStart_toStartOf="@+id/guide_form_end"
+                bind:welcomeViewModel="@{welcomeViewModel}"
+                app:layout_constraintTop_toTopOf="@+id/guide_pole_top" />
 
             <ImageView
                 android:id="@+id/imageView3"
