--- a/app/src/main/res/layout/view_login_circle.xml
+++ b/app/src/main/res/layout/view_login_circle.xml
@@ -15,12 +15,6 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView_username"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:text="@string/username"
-            android:textAppearance="@style/TextAppearance.caption"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout_username"
@@ -29,7 +23,6 @@
             app:endIconMode="clear_text"
             app:errorEnabled="true"
             app:errorResId="@{welcomeViewModel.userNameErrorMessage}">
-
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/txt_welcome_userName"
@@ -44,13 +37,6 @@
                 android:text="@={welcomeViewModel.userName}" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:id="@+id/textView_password"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:text="@string/password"
-            android:textAppearance="@style/TextAppearance.caption"
-            android:layout_marginTop="10dp"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout_pwd"
@@ -58,6 +44,7 @@
             android:hint="@string/password"
             app:endIconMode="password_toggle"
             app:errorEnabled="true"
+            android:layout_marginTop="10dp"
             app:errorResId="@{welcomeViewModel.passwordErrorMessage}">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -79,6 +66,7 @@
             app:icon="@drawable/icoon_stad"
             android:gravity="center"
             app:iconGravity="textStart"
+            app:iconSize="34dp"
             android:layout_marginTop="10dp"
             android:onClick="@{() -> welcomeViewModel.loginButtonClicked()}"/>
 
