--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,11 +36,11 @@
 
     <style name="AppTheme.PopupOverlay" parent="Theme.MaterialComponents.Light" />
 
-    <!--TODO terug aanpassen naar 25sp, maar anders staat het op alle pijlen fout-->
     <style name="TextAppearance.NavigationButton" parent="TextAppearance.MaterialComponents.Button">
         <item name="android:textSize">25sp</item>
         <item name="android:fontFamily">@font/sourcesanspro_semibold</item>
         <item name="android:textAllCaps">false</item>
+        <item name="android:letterSpacing">0</item>
     </style>
 
     <style name="TextAppearance.NavigationButtonSmall" parent="TextAppearance.NavigationButton">
@@ -55,12 +55,14 @@
         <item name="boxCornerRadiusBottomEnd">30dp</item>
         <item name="boxCornerRadiusBottomStart">30dp</item>
         <item name="android:lineSpacingExtra">4sp</item>
+        <item name="boxStrokeColor">@color/caption</item>
+        <item name="hintTextColor">@color/caption</item>
     </style>
 
     <style name="login_button" parent="Widget.MaterialComponents.Button.OutlinedButton.Icon">
         <item name="android:layout_width">300dp</item>
         <item name="android:layout_height">69dp</item>
-        <item name="cornerRadius">20dp</item>
+        <item name="cornerRadius">40dp</item>
         <item name="android:elevation">2dp</item>
         <item name="android:textAppearance">@style/TextAppearance.NavigationButton</item>
         <item name="android:textColor">@color/black</item>
@@ -116,42 +118,36 @@
         <item name="fontFamily">@font/sourcesanspro_light</item>
         <item name="android:fontFamily">@font/sourcesanspro_light</item>
         <item name="android:textSize">96sp</item>
-        <item name="android:letterSpacing">-1.5</item>
     </style>
 
     <style name="TextAppearance.H2" parent="TextAppearance.MaterialComponents.Headline2">
         <item name="fontFamily">@font/sourcesanspro_light</item>
         <item name="android:fontFamily">@font/sourcesanspro_light</item>
         <item name="android:textSize">60sp</item>
-        <item name="android:letterSpacing">-0.5</item>
     </style>
 
     <style name="TextAppearance.H3" parent="TextAppearance.MaterialComponents.Headline3">
         <item name="fontFamily">@font/sourcesanspro_light</item>
         <item name="android:fontFamily">@font/sourcesanspro_light</item>
         <item name="android:textSize">45sp</item>
-        <item name="android:letterSpacing">0</item>
     </style>
 
     <style name="TextAppearance.H4" parent="TextAppearance.MaterialComponents.Headline4">
         <item name="fontFamily">@font/sourcesanspro_light</item>
         <item name="android:fontFamily">@font/sourcesanspro_light</item>
         <item name="android:textSize">34sp</item>
-        <item name="android:letterSpacing">0.25</item>
     </style>
 
     <style name="TextAppearance.H5" parent="TextAppearance.MaterialComponents.Headline5">
         <item name="fontFamily">@font/sourcesanspro</item>
         <item name="android:fontFamily">@font/sourcesanspro</item>
         <item name="android:textSize">24sp</item>
-        <item name="android:letterSpacing">0</item>
     </style>
 
     <style name="TextAppearance.H6" parent="TextAppearance.MaterialComponents.Headline6">
         <item name="fontFamily">@font/sourcesanspro</item>
         <item name="android:fontFamily">@font/sourcesanspro</item>
         <item name="android:textSize">20sp</item>
-        <item name="android:letterSpacing">0.15</item>
     </style>
 
     <style name="TextAppearance.subtitle1" parent="TextAppearance.MaterialComponents.Subtitle1">
@@ -165,14 +161,12 @@
         <item name="fontFamily">@font/sourcesanspro_semibold</item>
         <item name="android:fontFamily">@font/sourcesanspro_semibold</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:letterSpacing">0.1</item>
     </style>
 
     <style name="TextAppearance.body1" parent="TextAppearance.MaterialComponents.Body1">
         <item name="fontFamily">@font/sourcesanspro</item>
         <item name="android:fontFamily">@font/sourcesanspro</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:letterSpacing">0.5</item>
     </style>
 
     <style name="TextAppearance.body2" parent="TextAppearance.MaterialComponents.Body2">
