--- a/app/src/main/res/navigation/nav_graph_events_dual.xml
+++ b/app/src/main/res/navigation/nav_graph_events_dual.xml
@@ -5,6 +5,6 @@
     app:startDestination="@id/eventDetailFragment">
     <fragment
         android:id="@+id/eventDetailFragment"
-        android:name="be.hogent.faith.faith.library.EventDetailFragment"
+        android:name="be.hogent.faith.faith.library.eventDetails.EventDetailFragment"
         android:label="EventDetailFragment" />
 </navigation>
