--- a/app/src/main/res/navigation/nav_graph_events_single.xml
+++ b/app/src/main/res/navigation/nav_graph_events_single.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/eventListFragment"
-        android:name="be.hogent.faith.faith.library.EventListFragment"
+        android:name="be.hogent.faith.faith.library.eventList.EventListFragment"
         android:label="EventListFragment">
         <action
             android:id="@+id/action_eventListFragment_to_eventDetailFragment"
@@ -14,6 +14,6 @@
     </fragment>
     <fragment
         android:id="@+id/eventDetailFragment"
-        android:name="be.hogent.faith.faith.library.EventDetailFragment"
+        android:name="be.hogent.faith.faith.library.eventDetails.EventDetailFragment"
         android:label="EventDetailFragment" />
 </navigation>
