--- a/app/src/main/res/layout/detail_item_rv.xml
+++ b/app/src/main/res/layout/detail_item_rv.xml
@@ -27,7 +27,7 @@
         app:srcCompat="@drawable/event_detail_text" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/text_detail_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
