--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -41,6 +41,8 @@
     <color name="skin_blank">#FFC18E</color>
     <color name="skin_lightbrown">#D39751</color>
     <color name="skin_darkbrown">#9C6231</color>
+
+    <color name="green_light">#95E8CD</color>
 </resources>
 
 
