--- a/app/src/main/res/layout/detail_item_rv.xml
+++ b/app/src/main/res/layout/detail_item_rv.xml
@@ -45,6 +45,7 @@
         android:id="@+id/text_detail_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginEnd="8dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
