--- a/app/src/main/res/layout/fragment_library_eventdetails.xml
+++ b/app/src/main/res/layout/fragment_library_eventdetails.xml
@@ -5,8 +5,8 @@
     <data>
 
         <variable
-            name="eventlistViewModel"
-            type="be.hogent.faith.faith.library.eventList.EventListViewModel" />
+            name="eventDetailsViewModel"
+            type="be.hogent.faith.faith.library.eventDetails.EventDetailsViewModel" />
 
     </data>
 
@@ -27,8 +27,8 @@
                 android:layout_marginTop="36dp"
                 android:layout_marginEnd="50dp"
                 android:layout_marginBottom="36dp"
-                android:src="@drawable/podlood_detail"
                 android:contentDescription="@string/potlood"
+                android:src="@drawable/podlood_detail"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -70,14 +70,13 @@
                 android:background="@drawable/ic_return"
                 android:contentDescription="@string/cancel"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-            <!--       android:onClick="@{() -> eventlistViewModel.onCancelClicked()}"-->
+                app:layout_constraintTop_toTopOf="parent"
+                 android:onClick="@{() -> eventDetailsViewModel.onCancelButtonClicked()}"/>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/eventdetails_card"
-                android:padding="0dp"
                 app:layout_constraintBottom_toTopOf="@+id/guideline_library_eventdetails_bottom"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_library_eventdetails_end"
                 app:layout_constraintStart_toEndOf="@+id/guideline_library_eventdetails_start"
@@ -101,7 +100,10 @@
                     android:id="@+id/img_avatar"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_margin="40dp"
+                    android:layout_marginEnd="36dp"
+                    android:layout_marginTop="36dp"
+                    android:layout_marginBottom="36dp"
+                    android:layout_marginStart="60dp"
                     android:contentDescription="@string/your_avatar"
                     android:scaleType="centerInside"
                     app:layout_constraintBottom_toTopOf="@+id/guideline_library_eventdetails_avatar_bottom"
@@ -114,8 +116,8 @@
                     android:id="@+id/lbl_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="36dp"
-                    android:text="@string/ex_title"
+                    android:layout_marginEnd="60dp"
+                    android:text="@{eventDetailsViewModel.event.title}"
                     android:textAppearance="@style/AppTheme.subtitle2"
                     android:textSize="60sp"
                     app:layout_constraintBottom_toTopOf="@+id/lbl_date"
@@ -128,7 +130,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:text="@string/ex_date"
+                    android:text="@{eventDetailsViewModel.eventDate}"
                     android:textAllCaps="true"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                     android:textSize="30sp"
@@ -165,6 +167,7 @@
                         android:id="@+id/lbl_description"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:text="@{eventDetailsViewModel.event.notes}"
                         android:textAppearance="@style/AppTheme.body2"
                         android:textSize="20sp" />
                 </ScrollView>
@@ -185,7 +188,7 @@
                     android:id="@+id/recyclerView_library_eventdetails"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_marginBottom="40dp"
+                    android:layout_marginBottom="60dp"
                     android:orientation="horizontal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/hr2"
